--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ async-timeout==5.0.1
 asyncpg==0.30.0
 attrs==25.3.0
 bcrypt==4.3.0
+cachetools==5.5.2
 certifi==2020.6.20
 cffi==1.17.1
 charset-normalizer==3.4.3
@@ -30,6 +31,8 @@ geographiclib==2.1
 geopy==2.4.1
 gitdb==4.0.12
 GitPython==3.1.45
+google-auth==2.40.3
+google-genai==1.38.0
 gotrue==2.12.3
 groq==0.30.0
 h11==0.16.0
@@ -53,6 +56,7 @@ passlib==1.7.4
 postgrest==1.1.1
 propcache==0.3.2
 pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pycparser==2.23
 pydantic==2.11.7
 pydantic-settings==2.10.1
@@ -81,6 +85,7 @@ StrEnum==0.4.15
 stripe==12.5.1
 supabase==2.17.0
 supafunc==0.10.1
+tenacity==9.1.2
 timezonefinder==8.0.0
 tomli==2.2.1
 typer==0.18.0
