--- a/requirements.txt
+++ b/requirements.txt
@@ -53,6 +53,7 @@ multidict==6.6.3
 numpy==2.2.6
 packaging==25.0
 passlib==1.7.4
+pillow==11.3.0
 postgrest==1.1.1
 propcache==0.3.2
 pyasn1==0.6.1
@@ -72,6 +73,7 @@ pytz==2025.2
 PyYAML==6.0.2
 ratelim==0.1.6
 realtime==2.6.0
+reportlab==4.4.4
 requests==2.32.5
 rich==14.1.0
 rsa==4.9.1
